<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity">

    <LinearLayout
        android:id="@+id/main_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/btn_listenlooklearnwords"
            style="@style/button_style_1"
            android:background="@drawable/selector_button_6"
            android:text="@string/listenlooklearnwords" />

        <Button
            android:id="@+id/btn_words123"
            style="@style/button_style_1"
            android:background="@drawable/selector_button_7"
            android:text="@string/words123" />

        <Button
            android:id="@+id/btn_testeveryday"
            style="@style/button_style_1"
            android:background="@drawable/selector_button_2"
            android:text="@string/testeveryday" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20.0dip"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/empty"
        android:src="@drawable/logo" 
        android:layout_above="@id/main_frame"/>
    
</RelativeLayout>