<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity" >

    <LinearLayout
        android:layout_width="400.0dip"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20.0dip"
            android:contentDescription="@string/empty"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_frame"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_username"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5.0dip" 
                    android:contentDescription="@string/empty"/>

                <start.widget.CustomEditText
                    android:id="@+id/et_login_account"
                    style="@style/edittext1"
                    android:hint="@string/accounthint" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="#c0c0c0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_password"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5.0dip" 
                    android:contentDescription="@string/empty"/>
                
                <start.widget.CustomEditText
                    android:id="@+id/et_login_password"
                    style="@style/edittext1"
                    android:hint="@string/passwordhint"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20.0dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:layout_weight="1"
                android:background="@drawable/selector_button_1"
                android:onClick="onClick"
                android:padding="10.0dip"
                android:text="@string/register"
                android:textColor="@color/selector_button_textcolor_1"
                android:textSize="16.0dip" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:layout_weight="1"
                android:background="@drawable/selector_button_2"
                android:onClick="onClick"
                android:padding="10.0dip"
                android:text="@string/login"
                android:textColor="@color/selector_button_textcolor_2"
                android:textSize="16.0dip" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>