<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bm_words"
    android:orientation="vertical"
    android:padding="10.0dip" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.5" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/problem_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="apple"
                android:layout_gravity="center_horizontal"
                android:textColor="#08a1db"
                android:textSize="65.0dip"
                android:textStyle="bold" />

            <View 
                android:layout_width="match_parent"
                android:layout_height="20.0dip"/>
            
            <TextView
                android:id="@+id/problem_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="当前第1个单词"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/test_textcolor"
                android:textSize="16.0dip" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.5" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    style="@style/button_style_rectangle"
                    android:background="@drawable/selector_button_color_transparent"
                    android:textColor="@color/test_textcolor"
                    android:text="@string/cannotskip" />

                <Button
                    style="@style/button_style_rectangle"
                    android:background="@drawable/selector_button_color_red"
                    android:text="@string/levelname8" />

                <Button
                    style="@style/button_style_rectangle"
                    android:background="@drawable/selector_button_color_red"
                    android:text="@string/levelname8" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    style="@style/button_style_rectangle"
                    android:background="@drawable/selector_button_color_red"
                    android:text="@string/levelname7" />

                <Button
                    style="@style/button_style_rectangle"
                    android:background="@drawable/selector_button_color_red"
                    android:text="@string/levelname8" />

                <Button
                    style="@style/button_style_rectangle"
                    android:background="@drawable/selector_button_color_red"
                    android:text="@string/levelname8" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>