<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bm_words"
    android:orientation="vertical"
    android:padding="10.0dip" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#413f40"
            android:textSize="16.0dip"
            android:text="可能不认识，可以跳过" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="10.0dip"
            android:orientation="vertical" >

            <ImageView
                    android:id="@+id/countdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/countdown12"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/empty"/>
                
                <TextView
                    android:id="@+id/txt_current_word_process"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#413f40"
                    android:textSize="16.0dip" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.5" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/problem_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#08a1db"
                android:textSize="65.0dip"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20.0dip" />

            <TextView
                android:id="@+id/problem_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/test_textcolor"
                android:textSize="16.0dip" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.5" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_answer_1"
                    style="@style/button_style_rectangle"
                    android:background="@drawable/selector_button_color_transparent"
                    android:text="@string/cannotskip"
                    android:textColor="@color/test_textcolor" />

                <Button
                    android:id="@+id/btn_answer_2"
                    style="@style/button_style_rectangle"
                    android:background="@drawable/selector_button_color_red"
                    android:text="@string/levelname8" />

                <Button
                    android:id="@+id/btn_answer_3"
                    style="@style/button_style_rectangle"
                    android:background="@drawable/selector_button_color_red"
                    android:text="@string/levelname8" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_answer_4"
                    style="@style/button_style_rectangle"
                    android:background="@drawable/selector_button_color_red"
                    android:text="@string/levelname7" />

                <Button
                    android:id="@+id/btn_answer_5"
                    style="@style/button_style_rectangle"
                    android:background="@drawable/selector_button_color_red"
                    android:text="@string/levelname8" />

                <Button
                    android:id="@+id/btn_answer_6"
                    style="@style/button_style_rectangle"
                    android:background="@drawable/selector_button_color_red"
                    android:text="@string/levelname8" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>